cmake_minimum_required(VERSION 3.10)
project(chapter05)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex05-01 lecture/ex05-01.c)
add_executable(ex05-02 lecture/ex05-02.c)
add_executable(ex05-03 lecture/ex05-03.c)
add_executable(ex05-04 lecture/ex05-04.c)
add_executable(ex05-05 lecture/ex05-05.c)
add_executable(ex05-06 lecture/ex05-06.c)
add_executable(ex01 exercise/ex01.c)
add_executable(ex02 exercise/ex02.c)
add_executable(ex05 exercise/ex05.c)
