cmake_minimum_required(VERSION 3.10)
project(chapter07)

set(CMAKE_CXX_STANDARD 14)

add_executable(ex07-01 lecture/ex07-01.c)
add_executable(ex07-02 lecture/ex07-02.c)
add_executable(ex07-03 lecture/ex07-03.c)
add_executable(ex07-04 lecture/ex07-04.c)
add_executable(ex07-05 lecture/ex07-05.c)
add_executable(ex07-06 lecture/ex07-06.c)
